@@ -20,6 +20,7 @@ Bugs fixed:
 - 1823565 Fixed sfcb alignment problem during clone
 - 1826149 Fixed sfcb bad spelling in brokerOs.c
 - 1830770 Fixed disallow external http connections
+- 1831794 Fixed unfinished SSL handshake blocks HTTP adapter
 
 Changes in 1.2.4
 ================
